@@ -12,7 +12,7 @@
  
  #ifndef EBA_SKIP_ENDIAN
  #define EBA_SKIP_ENDIAN 0
-@@ -371,8 +373,10 @@
+@@ -379,8 +381,10 @@
  
  #endif /* Eba_log_error0 */
  
